[package]
name = "hyper-hls"
authors = ["Jamie Brough <jamie@wavey.ai>"]
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-util = { version = "0.1.3", features = ["full"] }
env_logger = "0.11.0"
tokio = { version = "1.35.1", features = [] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
structopt = "0.3.26"
bytes = "1.5.0"
hyper = { version = "1.3.1", features = ["full"] }
http = "1"
regex = "1.10.2"
http-body-util = "0.1.1"
anyhow = "1.0.31"
quinn = { version = "0.10", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "ring",
] }
rustls = { version = "0.21.0", features = ["quic"] }
h2 = "0.4.3"
tokio-rustls = "0.26.0"
rustls-pemfile = "2"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
h3 = { git = "https://github.com/hyperium/h3.git" }
h3-quinn = { git = "https://github.com/hyperium/h3.git" }
h3-webtransport = { git = "https://github.com/hyperium/h3.git" }
mem3u8 = { git = "ssh://git@github.com/wavey-ai/mem3u8.git" }
pki-types = { package = "rustls-pki-types", version = "1.4.1" }

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
